src/App.css
* {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

body {
  background-color: #282c34;
  color: white;
}

.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

header > img {
  width: 80%;
  border: 5px solid white;
}

.carousel {
  display: block;
  max-width: 500px;
  margin: auto;
  min-height: 900px;
}

.carousel-cell {
  border: 5px solid white;
  align-self: center;
}



.nav_btn {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background: transparent;
  z-index: 4;
  border: none;
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  background: #fff;
}

.nav_btn > svg {
  fill: #000;
  width: 100%;
  height: 100%;
  position: relative;
}

.nav_btn_left {
  left: 0;
}
.nav_btn_right {
  right: 0;
}

.carousel .carousel-status {
  left: 0;
  right: 0;
  text-align: center;
  color: #000;
  font-size: 1.4rem;
  text-shadow: none;
  margin-top: 1rem;
  text-transform: uppercase;
  font-weight: 700;
}

